@@ -6,11 +6,12 @@ import static seedu.address.logic.parser.CommandParserTestUtil.assertParseFailur
 import static seedu.address.logic.parser.CommandParserTestUtil.assertParseSuccess;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
 import seedu.address.logic.commands.FindCommand;
-import seedu.address.model.person.NameContainsKeywordsPredicate;
+import seedu.address.model.person.PersonContainsKeywords;
 
 public class FindCommandParserTest {
 
@@ -23,9 +24,12 @@ public class FindCommandParserTest {
 
     @Test
     public void parse_validArgs_returnsFindCommand() {
-        // no leading and trailing whitespaces
+        // Fallback: no prefixes -> treat as name keywords
+        List<String> names = Arrays.asList("Alice", "Bob");
         FindCommand expectedFindCommand =
-                new FindCommand(new NameContainsKeywordsPredicate(Arrays.asList("Alice", "Bob")), false);
+                new FindCommand(new PersonContainsKeywords(names, List.of(), List.of(), List.of()), false);
+
+        // no leading and trailing whitespaces
         assertParseSuccess(parser, "Alice Bob", expectedFindCommand);
 
         // multiple whitespaces between keywords
@@ -33,10 +37,26 @@ public class FindCommandParserTest {
     }
 
     @Test
+    public void parse_validArgsWithPrefixes_returnsFindCommandMultiField() {
+        List<String> names = List.of("Alice");
+        List<String> emails = List.of("gmail.com");
+        List<String> tele = List.of("@alice");
+        List<String> tgs = List.of("Tutorial 1");
+
+        FindCommand expected = new FindCommand(
+                new PersonContainsKeywords(names, emails, tele, tgs), false);
+
+        // Note: tele handle prefix is u/
+        String input = " n/Alice e/gmail.com u/@alice tg/Tutorial 1";
+        assertParseSuccess(parser, input, expected);
+    }
+
+    @Test
     public void parse_validVerboseArgs_returnsVerboseFindCommand() {
         // no leading and trailing whitespaces
+        List<String> names = Arrays.asList("Alice", "Bob");
         FindCommand expectedFindCommand =
-                new FindCommand(new NameContainsKeywordsPredicate(Arrays.asList("Alice", "Bob")), true);
+                new FindCommand(new PersonContainsKeywords(names, List.of(), List.of(), List.of()), true);
         assertParseSuccess(parser, "Alice Bob" + SUFFIX_VERBOSE, expectedFindCommand);
 
         // multiple whitespaces between keywords
